--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "next": "14.2.13",
         "prisma": "^5.20.0",
         "react": "^18",
-        "react-dom": "^18"
+        "react-dom": "^18",
+        "react-toastify": "^10.0.5"
     },
     "devDependencies": {
         "@types/node": "^20",
