--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "@prisma/client": "^5.20.0",
+        "bcryptjs": "^2.4.3",
         "next": "14.2.13",
         "prisma": "^5.20.0",
         "react": "^18",
